--- a/src/layouts/Layout.module.css
+++ b/src/layouts/Layout.module.css
@@ -32,3 +32,48 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.header > :nth-child(1){
+    font-size: 1.2rem;
+
+}
+
+.searchBar{
+    background-color: rgba(255, 255, 255, 0.597);
+    width: 30%;
+    max-width: 25rem;
+    padding: 1rem 0rem;
+    border-radius: 10px;
+    height: 2px;
+    display: flex;
+    align-items: center;
+    border: 1px solid #272e5a;
+    justify-content: center;
+    gap: 8px;
+}
+.searchBar > input {
+    background: transparent;
+    color: black;
+    outline: none;
+    padding: 0;
+    width: 100%;
+    border: none;
+}
+
+.profile{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile > img {
+    height: 50px;
+    width: 50px;
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
