--- a/src/layouts/Layout.module.css
+++ b/src/layouts/Layout.module.css
@@ -68,8 +68,10 @@
 }
 
 .profile > img {
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+    border: 1px solid brown;
 }
 
 .details{
