--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -1,20 +1,28 @@
-.container{
-    height: 100vh;
-    width: 6%;
-    max-width: 6rem;
-    display: flex;
+.container {
+  height: 100vh;
+  width: 6%;
+  max-width: 6rem;
+  display: flex;
 
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem 0rem;
-    background-color: black;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 0rem;
+  background-color: black;
 }
 
-.logo{
-    width: 45%;
-    max-width: 4rem;
+.logo {
+  width: 45%;
+  max-width: 4rem;
 }
 
-.menu{
-    
+.menu {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
+
+.item > svg {
+  fill: antiquewhite;
+  width: 3rem;
 }
