--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -1,21 +1,39 @@
-.container{
-    width: 100%;
-    max-width: 130rem;
-    padding: 0 4rem;
-    display: flex;
-    gap: 2rem;
+.container {
+  width: 100%;
+  max-width: 130rem;
+  padding: 0 4rem;
+  display: flex;
+  gap: 2rem;
 }
 
-.dashboard{
-    width: 70;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.dashboard {
+  width: 70;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.dashbaordHead{
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-     
+.dashbaordHead {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.dashboardHead > .head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.head > :nth-child(1) {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.dashbaordHead > select {
+  border: none;
+  background-color: var(--orange-gradient);
+  padding: 10px;
+  font-weight: 500;
+  border-radius: 10px;
+  font-size: 0.8rem;
 }
