--- a/src/components/layouts/Layout.module.css
+++ b/src/components/layouts/Layout.module.css
@@ -37,12 +37,12 @@
     background-color: rgba(255, 255, 255, 0.597);
     width: 30%;
     max-width: 25rem;
-    padding: 1rem 0rem;
+    padding: 1rem 0.3rem;
     border-radius: 10px;
     height: 2px;
     display: flex;
     align-items: center;
-    border: 2px solid rgb(25, 25, 57);
+    border: 1px solid rgb(25, 25, 57);
     justify-content: center;
     gap: 8px;
   }
@@ -51,6 +51,7 @@
     background: transparent;
     color: rgb(7, 6, 6);
     outline: none;
+    border: none;
     padding: 0;
     width: 100%;
   }
