--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -43,6 +43,9 @@ font-weight: 500;
 width: 2rem;
 height: 2rem;
 background: var(--orange);
+margin-right: 3px;
+border-radius: 10px;
+color: black;
 }
 
 .arrowIcon > svg{
